--- a/index.html
+++ b/index.html
@@ -1025,14 +1025,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["AI & Data Science Enthusiast",
-      "NLP Researcher",
-      "Business Intelligence Developer",
-      "Data Engineer",
-      "Software Developer",
-      "Problem Solver",
-      "Tech Innovator",
-      "Cloud & Big Data Enthusiast"],
+      strings: ["AI & Data Science Enthusiast","NLP Researcher","Business Intelligence Developer","Data Engineer","Software Developer","Problem Solver","Tech Innovator","Cloud & Big Data Enthusiast"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
