--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="/assets/img/passport-new.jpg" class="circle img-responsive profile-pic" alt="avatar">
+          <img src="/assets/img/myphoto.jpg" class="circle img-responsive profile-pic" alt="avatar">
         </a>
       </li>
 
@@ -797,7 +797,13 @@
                 <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
               </div>
               <div class="col s4 m2">
+                <img alt="" src="/assets/img/Rlang.jpg" class="responsive-img" />R
+              </div>
+              <div class="col s4 m2">
                 <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/redshift.png" class="responsive-img" />RedShift
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
@@ -822,6 +828,9 @@
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" />matplotlib
               </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/hugg.png" class="responsive-img" />huggingface
+              </div>
             </div>
           </div>
         </div>
@@ -831,15 +840,6 @@
           <div class="card-content">
             <h4 class="brown-text light">Frameworks</h4>
             <div class="row text-center">
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/django-logo.webp" class="responsive-img" />Django
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/flask-logo.png" class="responsive-img" />Flask
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/bootstrap.png" class="responsive-img" />Bootstrap
-              </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/keras-logo.png" class="responsive-img" />Keras
               </div>
@@ -853,6 +853,44 @@
           </div>
         </div>
 
+        <!-- Business Inteliigence -->
+        <div class="card">
+          <div class="card-content">
+            <h4 class="brown-text light">Business Intelligence</h4>
+            <div class="row text-center">
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/tableau.png" class="responsive-img" />Tableau
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/pbi.jpg" class="responsive-img" />Power BI
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/looker.png" class="responsive-img" />Looker
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Cloud Tech -->
+        <div class="card">
+          <div class="card-content">
+            <h4 class="brown-text light">Big Data Tech</h4>
+            <div class="row text-center">
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/tableau.png" class="responsive-img" />Hadoop
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/pbi.jpg" class="responsive-img" />KAfka
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/looker.png" class="responsive-img" />Snowflake
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/datab.png" class="responsive-img" />Databricks
+              </div>
+            </div>
+          </div>
+        </div>
         <!-- Other -->
         <div class="card">
           <div class="card-content">
@@ -865,6 +903,9 @@
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/aws.png" class="responsive-img" />AWS
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/gcp.png" class="responsive-img" />GCP
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/heroku.png" class="responsive-img" />Heroku
