--- a/index.html
+++ b/index.html
@@ -1029,6 +1029,96 @@
       </div>
     </section>
 
+    
+     <!-- Fourth Section: Publication -->
+    <section id="publication" class="section scrollspy">
+      <h3 class="page-title white-text teal">Projects</h3>
+      <div class="container">
+        <div class="row">
+          <div class="col s12 m6 l4">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="Screenshot of  web app" src="/assets/img/Blog-Images-Forget-Machine-Learning-Humans-Still-Have-a-Lot-to-Learn-Part-II.jpg" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">Pixel Level Anomalous Segmentation <i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  Industrial Manufacturing Application
+                </p>
+              </div>
+              <div class="card-reveal">
+                <!-- TODO: change this -- only close button -->
+                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+                   <div class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li>This study focuses on unsupervised learning for anomalous segmentation of pharmaceutical products, aiming to detect and correct deviations timely, thereby avoiding escalation of errors and minimizing productivity loss without compromising quality and safety using the MVTec AD dataset.</li>
+                </ul>
+                <div class="card-action">
+                  <a aria-label="Visit " href="https://iraj.in/journal/IJACEN/paper_detail.php?paper_id=18964&namePixel_Level_Anomalous_Segmentation_in_Industrial_Manufacturing_Application" target="_blank" data-position="top"
+                      data-tooltip="View Online"
+                      class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                        class="fa fa-external-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col s12 m6 l4">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="music streaming app" src="/assets/img/project-music-player.png" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">Assessing diseased lettuce leaves using Pattern Recognition<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  Back propagation with feature subset
+                </p>
+              </div>
+              <div class="card-reveal">
+                <!-- TODO: change this -- only close button -->
+                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+                <div class="mdi-navigation-close right"></i></span>
+                  <ul>
+                    <li>This research aims to develop an automatic leaf detection system using a pattern recognition approach for early disease diagnosis in lettuce plants. The manual identification process is tedious, error-prone, and time-consuming; hence, this study proposes using a backpropagation neural network (BPNN)</li>
+                  </ul>
+                  <div class="card-action">
+                    <a aria-label="Visit "  href="https://ijaecs.iraj.in/paper_detail.php?paper_id=18994&nameAssessing_Diseased_Lettuce_Leaves_Using_Back_Propagation_With_Feature_Subset" target="_blank" data-position="top" data-tooltip="View Online"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-github"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col s12 m6 l4">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="music streaming app" src="/assets/img/project-music-player.png" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">A Multivariable Regression Analysis <i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  Air Quality using Statistical Approach
+                </p>
+              </div>
+              <div class="card-reveal">
+                <!-- TODO: change this -- only close button -->
+                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+                <div class="mdi-navigation-close right"></i></span>
+                  <ul>
+                    <li>A study examining the relationship between relative humidity and air quality. Although commonly overlooked, relative humidity impacts the perception of air temperature and pollutants. Chemical compounds pose risks to health and comfort levels.</li>
+                  </ul>
+                  <div class="card-action">
+                    <a aria-label="Visit " href="https://iraj.in/journal/IJEEDC/paper_detail.php?paper_id=18310&nameA_Multivariable_Regression_Analysis_of_Air_Quality_using_Statistical_Approach" target="_blank" data-position="top" data-tooltip="View Online"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-github"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
     <!-- Eight Section: Contact -->
     <section id="contact" class="section scrollspy full-height">
       <h3 class="page-title white-text teal">Contact</h3>
