--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
       <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Nithyashree
-        Balaji</a><span class="black-text">Business Inteliigence Specialist | Data-Driven Software Engineer</span>
+        Balaji</a><span class="black-text">Business Intelligence Specialist | Data-Driven Software Engineer</span>
 
     </div>
   </nav>
@@ -249,19 +249,22 @@
           </h2>
         </blockquote> -->        
         <p>
-          I am a Business Analytics and Artificial Intelligence Grad student at University of Texas at Dallas. I enjoy problem-solving and coding. Always strive to bring 100% to the work I do.
+          Driven by curiosity and a passion for turning data into actionable insights, I am a Business Analytics and Artificial Intelligence graduate student at the University of Texas at Dallas. With a strong foundation in data analytics, business intelligence, and AI-driven solutions, I thrive on solving complex problems, optimizing decision-making, and building scalable data solutions.
+          With three years of professional experience, I have developed expertise in Python, data engineering, ETL pipelines, dashboarding, and predictive modeling. My work revolves around transforming raw data into meaningful insights through BI tools, automation, and machine learning techniques. Whether it’s developing real-time analytics pipelines, designing intuitive visualizations, or leveraging AI to enhance business intelligence, I am always eager to explore innovative ways to make data work smarter.
 
-          I have worked on technologies like Python, Django, Flask, MySQL, PostgreSQL, MongoDB, HTML5, CSS, Java, C++ during my bachelor's. I have 3 years of professional work experience which helped me strengthen my experience in Python, Analytics and Business Intelligence.
 
-          I am passionate about developing complex applications that solve real-world problems impacting millions of users.
         </p>
         <p>
           <ul>
-            <li><b>Languages:</b> Python, R</li>
-            <li><b>Databases:</b> MySQL, PostgreSQL, MongoDB</li>
-            <li><b>Libraries:</b> NumPy, Pandas, OpenCV</li>
-            <li><b>Frameworks:</b> Keras, TensorFlow, PyTorch</li>
-            <li><b>Tools & Technologies:</b> Git, Azure, AWS, GCP, Heroku</li>
+            <li><b>Programming:</b> Python, R, SQL</li>
+            <li><b>Data & Databases:</b> MySQL, PostgreSQL</li>
+            <li><b>Data Analytics & BI</b>Power BI, Tableau, Pandas, NumPy</li>
+            <li><b>Machine Learning & AI:</b>Scikit-learn, TensorFlow, PyTorch </li>
+            <li><b>Cloud & Big Data:</b> AWS (Redshift, S3, Glue), Azure, GCP</li>
+            <li><b>ETL & Data Engineering:</b> Apache Airflow, SQL-based ETL pipelines</li>
+            <li><b>Version Control:</b> Git</li>
+
+
           </ul>
           
         </p>
@@ -271,7 +274,7 @@
           Detail-oriented Software Developer with professional experience in Backend Development, Machine Learning, Computer Vision. I am adept in Python, Django, Flask, SQL, Machine Learning, Computer Vision.           
         </p> -->
         <p>
-          Looking for an opportunity to work in a challenging position combining my skills in Software Engineering, data driven approach which provides professional development, interesting experiences and personal growth.
+          I am seeking a challenging role where I can apply my business intelligence, data analytics, and AI expertise to solve real-world problems. I am particularly interested in AI-driven analytics, data engineering, and business intelligence solutions that optimize decision-making and improve efficiency.
         </p>
         <!-- <p>
           Another Paragraph
@@ -883,7 +886,7 @@
                 <img alt="" src="/assets/img/pbi.jpg" class="responsive-img" />KAfka
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/looker.png" class="responsive-img" />Snowflake
+                <img alt="" src="/assets/img/snowflake.png" class="responsive-img" />Snowflake
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/datab.png" class="responsive-img" />Databricks
