--- a/index.html
+++ b/index.html
@@ -443,8 +443,6 @@
                   <li>Designed a secure and scalable ELT pipeline to process over 1 million global health records.</li>
                   <li>Utilized BigQuery for fast and efficient data transformation at scale.</li>
                   <li>Developed dynamic Looker dashboards for real-time insights and data-driven decision-making.</li>
-              
-
 
                 </ul>
                   <a aria-label="Visit the GitHub repo for  project" href="https://github.com/NithyashBala03/From-GCS-to-BigQuery"
@@ -459,11 +457,11 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="quiz app" src="/assets/img/project-quizup-logo-1.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="quiz app" src="/assets/img/project-quizup-logo-1.png" style="width: 100%; height: auto; object-fit: cover;" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">ML-Powered Sales Forecasting & Anomaly Detection<i
-                    class="mdi-navigation-more-vert right"></i></span>
+                <span class="card-title activator teal-text hoverline">ML-Powered Sales Forecasting & Anomaly Detection
+                  <i class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   Global Health Data Analytics: Secure, Scalable Insights for Disease Management
                 </p>
@@ -484,53 +482,15 @@
                 <div class="card-action">
                   <a aria-label="Visit " href="https://nithyashbala03.github.io/Nithyashreebala/assets/imgs/SaaS-Sales_analysis.pdf" target="_blank" data-position="top"
                     data-tooltip="View Online"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-external-link"></i></a>
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-external-link"></i></a>
                   <a aria-label="Visit the GitHub repo for  project" href="https://github.com/NithyashBala03/AWS-QuickSight"
                     target="_blank" data-position="top" data-tooltip="View Source"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-github"></i></a>
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
+                    <i class="fa fa-github"></i></a>
                 </div>
               </div>
             </div>
           </div>
-
-          <!-- 1. Django Project -->
-          <!-- <div class="col s12 m6 l6">
-            <div class="card medium">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img alt="django web app" src="/assets/img/project-library-logo.png" style="height: 100%; width: 100%" class="activator" />
-              </div>
-              <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Local Library Web-App<i
-                    class="mdi-navigation-more-vert right"></i></span>
-                <p>
-                  A web-app that creates an online catalog for a small local library, where users can browse available books and manage their accounts.
-                </p>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text"><small>Accomplishments</small><i
-                    class="mdi-navigation-close right"></i></span>
-                <ul>
-                  <li><b>Tools:</b> HTML, CSS, Bootstrap, SQLite, Django, Heroku</li>
-                  <li>Users can view list and detail information for books and authors.</li>
-                  <li>Admin users can create and manage models.</li>
-                  <li>Librarians can renew reserved books.</li>
-
-                </ul>
-                <div class="card-action">
-                  <a aria-label="Visit " href="https://django-local-lib.herokuapp.com" target="_blank" data-position="top"
-                    data-tooltip="View Online"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/django-local-library"
-                    target="_blank" data-position="top" data-tooltip="View Source"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-github"></i></a>
-                </div>
-              </div>
-            </div>
-          </div> -->
 
           <!-- Flask Project -->
           <div class="col s12 m6 l4">
@@ -574,7 +534,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/assets/img/project-aim_bert-bias.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Screenshot of  web app" src="/assets/img/project-aim_bert-bias.png" style="width: 100%; height: auto; object-fit: cover;" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Meatless Momentum -Conagra Hackathon<i
@@ -616,7 +576,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/assets/img/computer-vision-v2-04.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Screenshot of  web app" src="/assets/img/computer-vision-v2-04.png" style="width: 100%; height: auto; object-fit: cover;" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">London Housing<i
@@ -661,7 +621,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/assets/img/gan.jpg" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Screenshot of  web app" src="/assets/img/gan.jpg" style="width: 100%; height: auto; object-fit: cover;" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">HealMat  Axxess Hackathon<i
@@ -706,7 +666,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/assets/img/Blog-Images-Forget-Machine-Learning-Humans-Still-Have-a-Lot-to-Learn-Part-II.jpg" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Screenshot of  web app" src="/assets/img/Blog-Images-Forget-Machine-Learning-Humans-Still-Have-a-Lot-to-Learn-Part-II.jpg" style="width: 100%; height: auto; object-fit: cover;" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">DataViz Hackathon - Ground Game Health<i
@@ -718,8 +678,8 @@
               <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
                 <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title brown-text"><small>Accomplishments</small><i
-                    class="mdi-navigation-close right"></i></span>
+                <span class="card-title brown-text"><small>Accomplishments</small>
+                  <i class="mdi-navigation-close right"></i></span>
                 <ul>
                   <li>Data Analysis: Python (pandas, numpy), Jupyter Notebooks</li>
                   <li>Machine Learning: Scikit-learn, Random Forest</li>
@@ -747,11 +707,11 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/assets/img/Blog-Images-Forget-Machine-Learning-Humans-Still-Have-a-Lot-to-Learn-Part-II.jpg" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Screenshot of  web app" src="/assets/img/Blog-Images-Forget-Machine-Learning-Humans-Still-Have-a-Lot-to-Learn-Part-II.jpg" style="width: 100%; height: auto; object-fit: cover;" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Sales Dashboard using BI
-                    class="mdi-navigation-more-vert right"></i></span>
+                    <i class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   A system that calculates the attendance of the class from a panoramic image of a live classroom.
                 </p>
@@ -1071,7 +1031,7 @@
       <div class="col s12 m6 l4">
         <div class="card medium">
           <div class="card-image waves-effect waves-block waves-light">
-            <img alt="Leaf disease detection" src="/assets/img/leaf-disease-detection.jpg" style="height: 100%; width: 100%;" class="activator" />
+            <img alt="Leaf disease detection" src="/assets/img/project-ml-extra.jpg" style="height: 100%; width: 100%;" class="activator" />
           </div>
           <div class="card-content">
             <span class="card-title activator teal-text hoverline">
@@ -1099,7 +1059,7 @@
       <div class="col s12 m6 l4">
         <div class="card medium">
           <div class="card-image waves-effect waves-block waves-light">
-            <img alt="Air quality analysis" src="/assets/img/air-quality-analysis.jpg" style="height: 100%; width: 100%;" class="activator" />
+            <img alt="Air quality analysis" src="/assets/img/project-ml-7.jpg" style="height: 100%; width: 100%;" class="activator" />
           </div>
           <div class="card-content">
             <span class="card-title activator teal-text hoverline">
@@ -1127,9 +1087,6 @@
   </div>
 </section>
 
-<!-- Include Materialize and FontAwesome -->
-    
-
 
     <!-- Eight Section: Contact -->
     <section id="contact" class="section scrollspy full-height">
@@ -1137,8 +1094,8 @@
       <div class="container">
         <p>
           <a aria-label="Call Nithyashree" data-position="top" data-tooltip="Call Nithyashree"
-            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Nithyashree">+1 9452433494</a></a>
+            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"></a><i class="fa fa-phone"></i>
+            <a aria-label="Call Nithyashree">+1 9452433494</a></a>
         </p>
         <p>
           <a aria-label="Email Varad" href="mailto:nithyashreebalaji840@gmail.com" target="_blank" data-position="top"
