--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/assets/img/Blog-Images-Forget-Machine-Learning-Humans-Still-Have-a-Lot-to-Learn-Part-II.jpg" style="width: 100%; height: auto; object-fit: cover;" class="activator" />
+                <img alt="Screenshot of  web app" src="/assets/img/Blog-Images-Forget-Machine-Learning-Humans-Still-Have-a-Lot-to-Learn-Part-II.jpg" style="width: 100%; height: auto; object-fit: contain;" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Sales Dashboard using BI
